* Debian installation file used for Debian OS family instead of only Debian distribution    * By this way installation works also for Ubuntu * Network and Graphite plugin configs changes so that it is possible to write to Graphite   from what ever node, not only from collectd_forwarder.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,9 @@ collectd_forwarder: ''
 
 use_librato: false
 use_graphite: false
+graphite_prefix: ''
+graphite_postfix: ''
+graphite_protocol: udp
 
 collectd_plugins:
   - syslog
