Added support for dbi plugin config and libdbi driver installation

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,6 +23,7 @@ collectd_plugins:
   - librato
   - exec
   - mysql
+  - dbi
   - write_graphite
 
 packages:
@@ -48,3 +49,4 @@ packages:
   - collectd-rrdtool
   - collectd-snmp
   - collectd-write_riemann
+  - libdbi-dbd-mysql
